# Aperture

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  database.py  llm.py
migrations/: env.py
migrations/versions/: 20cd882f5ce8_initial_tables.py
models/: chat.py  db.py
routers/: agent.py
tools/: functions.py  registry.py  schemas.py
