[project]
name = "aperture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.1",
    "html2text>=2025.4.15",
    "loguru>=0.7.3",
    "openai>=2.43.0",
    "playwright>=1.61.0",
    "sqlalchemy>=2.0.51",
]
